# istota

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEVLOG.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  schema.sql
.claude/rules/: config.md  executor.md  scheduler.md  skills.md
.github/workflows/: release.yml
config/: config.example.toml  emissaries.md  persona.md
config/guidelines/: briefing.md  email.md  talk.md
config/skills/: _index.toml  accounting.md  bookmarks.md  briefings-config.md  browse.md  calendar.md  developer.md  email.md  memory.md  nextcloud.md  (+5 more)
deploy/: README.md  install.sh  render_config.py
docker/: docker-compose.browser.yml
scripts/: scheduler.sh  setup.sh  sync-emissaries.sh  test_bot_detection.py  test_browse_sites.py  test_nytimes.py
tests/: conftest.py  test_briefing.py  test_briefing_loader.py  test_browse_integration.py  test_channel_sleep_cycle.py  test_commands.py  test_config.py  test_config_progress.py  test_context.py  test_cron_loader.py  test_db.py  test_email_poller.py  test_executor.py  test_executor_streaming.py  test_feed_poller.py  test_heartbeat.py  test_invoice_scheduler.py  test_kv.py  test_location.py  test_log_channel.py  test_markets.py  test_memory_search.py  test_nextcloud_api.py  test_nextcloud_client.py  test_nextcloud_client_integration.py  test_nextcloud_skill_cli.py  test_notifications.py  test_progress_callback.py  test_sandbox.py  test_scheduler.py  test_security.py  test_shared_file_organizer.py  test_skill_env.py  test_skill_proxy.py  test_skills_accounting.py  test_skills_bookmarks.py  test_skills_browse.py  test_skills_calendar.py  test_skills_email.py  test_skills_files.py  (+14 more)
(+155 files in other folders)
