[project]
name = "istota"
version = "0.1.1"
description = "Claude Code-powered bot with Nextcloud Talk interface"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
    "croniter>=2.0.0",
    "tomli>=2.0.0",
    "yfinance>=0.2.0",
    "imap-tools>=1.0.0",
    "beancount>=3.0.0",
    "beanquery>=0.1.0",
    "fava>=1.29",
    "pytesseract>=0.3.10",
    "weasyprint>=62.0",
    "feedparser>=6.0.0",
    "monarchmoneycommunity @ git+https://github.com/bradleyseanf/monarchmoney@main",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
memory-search = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
whisper = [
    "faster-whisper>=1.1.0",
    "psutil>=5.9.0",
]

[project.scripts]
istota = "istota.cli:main"
istota-scheduler = "istota.scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/istota"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: tests requiring real Nextcloud connectivity (deselected by default)",
]
addopts = "-m 'not integration'"
asyncio_mode = "auto"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]
